include(low_level_driverTaskLib)
ADD_LIBRARY(${LOW_LEVEL_DRIVER_TASKLIB_NAME} SHARED 
    ${LOW_LEVEL_DRIVER_TASKLIB_SOURCES})

pkg_check_modules(SAMPLE_AGGREGATOR REQUIRED aggregator)
include_directories(${SAMPLE_AGGREGATOR_INCLUDE_DIRS})
link_directories(${SAMPLE_AGGREGATOR_LIBRARY_DIRS})

add_dependencies(${LOW_LEVEL_DRIVER_TASKLIB_NAME}
    regen-toolkit)

TARGET_LINK_LIBRARIES(${LOW_LEVEL_DRIVER_TASKLIB_NAME}
    ${OrocosRTT_LIBRARIES}
    ${LOW_LEVEL_DRIVER_TASKLIB_DEPENDENT_LIBRARIES}
    ${SAMPLE_AGGREGATOR_LIBRARIES})
SET_TARGET_PROPERTIES(${LOW_LEVEL_DRIVER_TASKLIB_NAME}
    PROPERTIES LINK_INTERFACE_LIBRARIES "${LOW_LEVEL_DRIVER_TASKLIB_INTERFACE_LIBRARIES}")

INSTALL(TARGETS ${LOW_LEVEL_DRIVER_TASKLIB_NAME}
    RUNTIME DESTINATION bin
    LIBRARY DESTINATION lib/orocos)

INSTALL(FILES ${LOW_LEVEL_DRIVER_TASKLIB_HEADERS}
    DESTINATION include/orocos/low_level_driver)

